Weird behavior with the set spline type node selection #110666

Closed
opened 2023-08-01 03:31:18 +02:00 by Shmuel Israel · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98

Blender Version
Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: 8bda729ef4dc
Worked: (newest version of Blender that worked as expected)

Short description of error
The selection on the set spline type isn't working right for bezier and NURBS modes.
Also adding another node before the set spline type node will manipulate the weird behavior, even though the node doesn't do anything or is muted etc.

Exact steps for others to reproduce the error

  • add a GN setup
  • add more that one curve
  • add a set spline type
  • try adding a selection that doesn't select all splines
  • see the weirdness.
    (it is more perceivable if the splines have more than two points, though the bug is still there)

File:

GN_set_spline_type_test.blend

Video:

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98 **Blender Version** Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: `8bda729ef4dc` Worked: (newest version of Blender that worked as expected) **Short description of error** The selection on the *set spline type* isn't working right for bezier and NURBS modes. Also adding another node before the *set spline type* node will manipulate the weird behavior, even though the node doesn't do anything or is muted etc. **Exact steps for others to reproduce the error** - add a GN setup - add more that one curve - add a *set spline type* - try adding a selection that doesn't select all splines - see the weirdness. (it is more perceivable if the splines have more than two points, though the bug is still there) File: [GN_set_spline_type_test.blend](/attachments/c1f7ad44-ca5f-4ddf-93ee-d412cc342f50) Video: <video src="/attachments/e886469a-8683-4f0b-8c22-8dccd37aa4c2" title="2023-07-31 21-15-45.mp4" controls></video>
Shmuel Israel added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-01 03:31:19 +02:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Iliya Katushenock self-assigned this 2023-08-01 12:27:48 +02:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-10-08 22:33:44 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-10-09 10:44:44 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-09 10:44:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110666
No description provided.