Fix #110666: Copy built-in attributes for masked curves type conversion

Curve type conversion can cause changing of some curves size.
Also, changing of curve type can cause deletion of unnecessary
built-in attributes and creating new ones. All of this make sense
only for converted curves. Others, unselected, should simply make
copy all old attributes, both built-in and not. This fix simply replaces
the last copy from incorrect only non-built-in, to a correct one,
for all attributes.

Backport of 26346464e0c09b1c195758ecc8d174534468227f

Pull Request: https://projects.blender.org/blender/blender/pulls/114765